--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,8 @@
         android:padding="14dp"
         android:background="@drawable/edittext_background"
         android:textSize="16sp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:inputType="textPersonName"/>
 
     <!-- Email Input -->
     <EditText
